docs: add README.md
