# models/user.go
@@ -52,6 +52,7 @@ type CreateUserRequest struct {
 type UpdateUserRequest struct {
 	Username  string `json:"username"`
 	Email     string `json:"email"`
+	Password  string `json:"password"`
 	FirstName string `json:"first_name"`
 	LastName  string `json:"last_name"`
 }
